@@ -1,7 +1,7 @@
 name             = Dist-Zilla-PluginBundle-Author-LESPEA
 author           = Adam Lesperance <lespea@gmail.com>
 license          = Perl_5
-version          = 1.004000
+version          = 1.005000
 
 copyright_holder = Adam Lesperance
 copyright_year   = 2011
@@ -26,8 +26,8 @@ include_dotfiles = 1
 ;add_meta          = 1
 
 
-[Signature]
-sign = always
+;[Signature]
+;sign = always
 
 [Git::Check]
 allow_dirty = README.pod
@@ -55,6 +55,7 @@ Dist::Zilla::Plugin::Bootstrap::lib                 = 0
 [Prereqs]
 Moose                                               = 2.0
 CPAN::Meta::YAML                                    = 0
+Perl::Critic                                        = 1.118
 Perl::Critic::Bangs                                 = 1.08
 Perl::Critic::Lax                                   = 0
 Perl::Critic::StricterSubs                          = 0
@@ -116,11 +117,11 @@ Dist::Zilla::Plugin::SpellingCommonMistakesTests    = 0
 Dist::Zilla::Plugin::Test::CPAN::Changes            = 0.005
 Dist::Zilla::Plugin::Test::Compile                  = 1.112400
 Dist::Zilla::Plugin::Test::DistManifest             = 2.0.1
-Dist::Zilla::Plugin::Test::Kwalitee                 = 0
+;Dist::Zilla::Plugin::Test::Kwalitee                 = 0
 Dist::Zilla::Plugin::Test::MinimumVersion           = 2.0.1
 Dist::Zilla::Plugin::Test::Perl::Critic             = 2.112410
 Dist::Zilla::Plugin::Test::Portability              = 2.0.1
 Dist::Zilla::Plugin::Test::Synopsis                 = 2.0.1
-Dist::Zilla::Plugin::Test::UnusedVars               = 2.0.1
+;Dist::Zilla::Plugin::Test::UnusedVars               = 2.0.1
 Dist::Zilla::Plugin::TestRelease                    = 0
 Dist::Zilla::Plugin::UploadToCPAN                   = 0
